--- a/templates/index.html
+++ b/templates/index.html
@@ -248,7 +248,7 @@
     </div>
     
     <footer>
-        <p>Luarmor &copy; {{ now.year }} - #1 Lua Licensing System</p>
+        <p>Luarmor &copy; {{ current_year }} - #1 Lua Licensing System</p>
     </footer>
     
     <script>
